# EngineEngine

./: .gitignore  CMakeLists.txt  GenerateAndBuild.bat  GenerateAndBuildRelease.bat  README.md  TODO.txt  TODO_DEF.txt  TODO_PBR.txt  TODO_VIZ.txt  conanfile.txt
CMake/: Utils.cmake
assets/gltf/: cube.glb  plane.glb  two_cubes.glb
assets/shaders/: blit.frag  blit.vert  colors.frag  colors.vert  frag.glsl  grid.frag  grid.vert  light_cube.frag  light_cube.vert  light_map.frag  light_map.vert  material.frag  material.vert  point_shadow.frag  point_shadow.geom  point_shadow.vert  shadow.frag  shadow.geom  shadow.vert  skybox.frag  skybox.vert  triangle_v2.frag  triangle_v2.vert
assets/shaders/deferred/: deferred.frag  deferred.vert  deferred_regular.frag  mrt.frag  mrt.vert
assets/shaders/forward/: forward.frag  forward.vert
assets/shaders/lib/: common.glsl  lighting.glsl  pbr_lighting.glsl  shadows.glsl
assets/shaders/pbr/: forward.frag  forward.vert  lighting.glsl
assets/shaders/shader_playground/: fullscreen.vert  fullscreen_quad.frag  fullscreen_quad.vert  unlit.frag  unlit.vert
assets/shaders/terrain/: height.comp
assets/shaders/test/: triangle_v2.vert
assets/shaders/tutorial/: light_map.frag  light_map.vert
docs/: Doxyfile
src/: CMakeLists.txt  main.cpp
src/application/: CMakeLists.txt  application.cpp  application.h  application_events.h  application_options.h  application_sdl3.cpp  common.h  service_locator.cpp  service_locator.h
src/application/application_entry/: CMakeLists.txt  application_entry.cpp  application_entry.h
src/compiler/: CMakeLists.txt  compiler.cpp  compiler.h
src/deferred/: CMakeLists.txt  deferred.cpp  deferred_renderer.cpp  deferred_runtime.cpp  deferred_runtime.h  deferred_scene_setup.cpp  deferred_scene_setup.h  deferred_ui_setup.cpp  deferred_ui_setup.h  frame_stats_panel.h  menu_bar.h  renderer_timings_panel.h  ui_layer.h
src/event/: CMakeLists.txt  doc.txt  event.cpp  event.h
src/filesystem/: CMakeLists.txt  filesystem.cpp  filesystem.h  os_filesystem.cpp  os_filesystem.h  path_utils.cpp  path_utils.h
src/forward/: CMakeLists.txt  debug_stats_panel.h  default_samplers.h  forward.cpp  forward_runtime.cpp  forward_runtime.h  forward_scene_setup.cpp  forward_scene_setup.h  forward_ui_setup.cpp  forward_ui_setup.h  frame_stats_panel.h  menu_bar.h  render_scene_extractor.cpp  render_scene_extractor.h  renderer_timings_panel.h  ui_layer.h
src/forward/scene/: components.h  scene_asset_handles.h  transform_system.cpp
src/input/: CMakeLists.txt  input.cpp  input.h
src/math/: helpers.h  math_common.h
src/rendering/: CMakeLists.txt  aabb.h  cache.cpp  cache.h  camera.cpp  camera.h  debug_draw.h  default_textures.h  drawable.h  frame_data.h  framegraph_resources.h  gltf_laoder.cpp  gltf_loader.cpp  gltf_loader.h  gltf_material_bridge.h  gltf_scene_importer.cpp  gltf_scene_importer.h  image_loader.cpp  image_loader.h  light.h  material.h  mesh_category.h  mesh_loader.h  mesh_storage.cpp  mesh_storage.h  pipeline_builder.cpp  pipeline_builder.h  primitve_shapes.h  render_asset_registry.cpp  render_asset_registry.h  render_resource_store.cpp  render_resource_store.h  render_settings.h  render_stats.h  renderer_compositor.cpp  renderer_compositor.h  rendering_context_driver.cpp  rendering_context_driver.h  rendering_device.cpp  rendering_device.h  (+22 more)
src/rendering/fg/: blackboard.h  frame_graph.cpp  frame_graph.h  frame_graph.inl  frame_graph_resource.h  fwd.h  graphviz_writer.cpp  graphviz_writer.h  pass_node.cpp  pass_node.h  resource_entry.h  resource_entry.inl  type_traits.h
src/rendering/render_passes/: common.cpp  common.h  framegraph_resources.cpp  framegraph_resources.h  shadow_passes.h
src/rendering/renderers/: debug_renderer.cpp  debug_renderer.h  deferred_render_pipeline.cpp  deferred_render_pipeline.h  deferred_renderer.cpp  deferred_renderer.h  forward_render_pipeline.cpp  forward_render_pipeline.h  forward_renderer.cpp  forward_renderer.h  renderer.h
src/rendering/scene/: components.h  render_scene_extractor.cpp  render_scene_extractor.h  transform_system.cpp  transform_system.h
src/shader_playground/: CMakeLists.txt  playground.cpp  playground_bindings.cpp  playground_bindings.h  playground_runtime.cpp  playground_runtime.h  playground_scene.cpp  playground_scene.h
src/terrain/: CMakeLists.txt  terrain.cpp  terrain_generator.cpp  terrain_generator.h  terrain_runtime.cpp  terrain_runtime.h
src/tutorial/: CMakeLists.txt  debug_stats_panel.h  forward.cpp  tutorial.cpp  ui_layer.h
src/tutorial/scene/: components.h
src/util/: CMakeLists.txt  cli_parser.cpp  error_macros.cpp  error_macros.h  hash_func.h  logger.cpp  logger.h  profiler.h  renderdoc_helpers.h  rid.h  rid_owner.h  small_vector.h  timer.cpp  timer.h
src/vulkan/: CMakeLists.txt  _vulkan_headers.h  imgui_vulkan_device.cpp  imgui_vulkan_device.h  shader_container.cpp  shader_container.h  vulkan_common.h  vulkan_context.cpp  vulkan_context.h  vulkan_device.cpp  vulkan_device.h  wsi.cpp  wsi.h
test/: CMakeLists.txt  SampleTest.cpp  logger_test.cpp  vulkan_test.cpp
