add_subdirectory(util)
add_subdirectory(application)
add_subdirectory(event)
add_subdirectory(input)
add_subdirectory(vulkan)
add_subdirectory(math)
add_subdirectory(filesystem)
add_subdirectory(compiler)
add_subdirectory(rendering)
add_subdirectory(forward)
add_subdirectory(terrain)
add_subdirectory(shader_playground)
add_subdirectory(deferred)